apps/http-echo/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: http-echo
spec:
    selector:
        pod: http-echo
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: 8080
