apps/http-echo/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: http-echo
spec:
    parentRefs:
        - name: wac-hospital-gateway
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /http-echo
          backendRefs:
              - group: ""
                kind: Service
                name: http-echo
                port: 80
